fix: tighten spacing between clippings headline and excerpt
Remove margin between the link paragraph and following text in clippings posts.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1089,6 +1089,14 @@ pre code {
   margin-bottom: var(--spacing-sm);
 }
 
+.cat-clippings .e-content li > p:first-child {
+  margin-bottom: 0;
+}
+
+.cat-clippings .e-content li > p:first-child + p {
+  margin-top: 0;
+}
+
 /* Remove list styling, make links stand out */
 .cat-clippings .e-content ul {
   list-style: none;
@@ -1110,7 +1118,7 @@ pre code {
   font-size: 1.1em;
   line-height: 1.3;
   display: block;
-  margin-bottom: var(--spacing-sm);
+  margin-bottom: 0;
   color: #b35a00;
   text-decoration: none;
 }
